[project]
name = "marketplace-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "azure-identity>=1.24.0",
    "azure-servicebus>=7.14.2",
    "bcrypt>=4.3.0",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "numpy>=2.3.2",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "passlib>=1.7.4",
    "peewee>=3.18.2",
    "playhouse>=0.1.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "plotly>=6.3.0",
    "tabulate>=0.9.0",
]
